# Cinema-Sansaar

./: .gitignore  CMakeLists.txt  Data.db  Posters.qrc  README.md  bookingmanager.cpp  bookingmanager.h  change_pass.cpp  change_pass.h  change_pass.ui  dashboard.cpp  dashboard.h  dashboard.ui  database.cpp  database.h  harry.cpp  harry.h  harry.ui  homepage.cpp  homepage.h  homepage.ui  imagebutton.cpp  imagebutton.h  kabir.cpp  kabir.h  kabir.ui  mahajatra.cpp  mahajatra.h  mahajatra.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  mirzapur.cpp  mirzapur.h  mirzapur.ui  sanju.cpp  sanju.h  sanju.ui  seat_selection.cpp  (+18 more)
Database/: Data.db  Data.sqbpro  movie.db
